Replace deprecated URL constructor
See https://inside.java/2023/02/15/quality-heads-up/

Change-Id: Ia2ab8c3df5cf66c1325aefcd66d764b9928a14f9